# dissectme

./: .gitignore  CMakeLists.txt  dissectme.cpp  dissectme.h
dissector/: dissector.h
network_traffic/: client.py  server.py
vaults/WsD/: Code Structure.md  DissectMe.md  Kaitai based configuration.md
vaults/WsD/.obsidian/: workspace.json
